Add unit test project with two tests.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Guiddy.Wpf/obj/
 Guiddy.Wpf/bin/
 Guiddy.Wpf/publish/
 Guiddy.Wpf/Guiddy.Wpf_TemporaryKey.pfx
+Guiddy.Wpf.Tests/bin/
+Guiddy.Wpf.Tests/obj/
